# ComfyUI-LongCat-Avatar

./: .comfyignore  .gitignore  .pre-commit-config.yaml  LongCat_Video_node.py  README.md  __init__.py  node_utils.py  pyproject.toml  requirements-acceleration.txt  requirements-vocal.txt  requirements.txt
.github/workflows/: publish.yml
LongCat_Video/: README.md  UPSTREAM_VERSION.md  attention_contract.py  audio_contract.py  audio_crop.py  backend_capabilities.py  backend_dtype_policy.py  bbox_contract.py  checkpoint_contract.py  debug_profile.py  layer_streaming.py  mlx_bridge.py  mlx_generation_backend.py  mlx_runner_cli.py  mlx_runner_contract.py  mlx_runner_validation.py  mlx_smoke_gate.py  model_contract.py  model_loading_contract.py  mps_attention_probe.py  mps_dit_smoke.py  mps_smoke_matrix.py  mps_vae_smoke.py  performance_contract.py  run_demo_avatar_multi_audio_to_video.py  run_demo_avatar_single_audio_to_video.py  run_demo_image_to_video.py  run_demo_interactive_video.py  run_demo_long_video.py  run_demo_text_to_video.py  run_demo_video_continuation.py  run_streamlit.py  sampler_contract.py  scheduler_contract.py  text_conditioning.py  utils.py  video_output.py
LongCat_Video/longcat_video/: pipeline_longcat_video.py  (+1 more)
example_workflows/: longcat-avatar1.5.json
js/: longcat_audio_crop_preview.js  longcat_model_selector.js
scripts/: run_mlx_q4_smoke_gate.py  run_mps_smoke_matrix.py  validate_comfy_registry_metadata.py
tests/: TEST_SOP.md  __init__.py  test_attention_contract.py  test_attention_ops.py  test_audio_contract.py  test_backend_capabilities.py  test_backend_dtype_policy.py  test_bbox_contract.py  test_dependency_contract.py  test_frontend_extension_contract.py  test_mlx_bridge.py  test_mlx_generation_backend.py  test_mlx_q4_smoke_script.py  test_mlx_runner_cli.py  test_mlx_runner_contract.py  test_mlx_runner_validation.py  test_mlx_smoke_gate.py  test_model_contract.py  test_model_download_contract.py  test_mps_dit_smoke.py  test_mps_feasibility_contract.py  test_mps_smoke_matrix.py  test_mps_vae_smoke.py  test_multi_avatar_runtime_hygiene.py  test_node_schema_contract.py  test_performance_contract.py  test_quality_gate_contract.py  test_registry_metadata.py  test_runtime_device_cache.py  test_sampler_contract.py  test_scheduler_contract.py  test_sharded_checkpoint_contract.py  test_text_conditioning.py  test_upstream_provenance.py  test_video_output.py  test_workflow_contract.py
(+30 files in other folders)
